; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_mt6351.c_mt_pga_left_event.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_mt6351.c_mt_pga_left_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dapm_widget = type { i32 }
%struct.snd_kcontrol = type { i32 }
%struct.snd_soc_component = type { i32 }

@MT6351_AUDENC_ANA_CON0 = common dso_local global i32 0, align 4
@RG_AUDPREAMPLDCPRECHARGE = common dso_local global i32 0, align 4
@RG_AUDPREAMPLDCCEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.snd_kcontrol*, i32)* @mt_pga_left_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mt_pga_left_event(%struct.snd_soc_dapm_widget* %0, %struct.snd_kcontrol* %1, i32 %2) #0 {
  %4 = alloca %struct.snd_soc_dapm_widget*, align 8
  %5 = alloca %struct.snd_kcontrol*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.snd_soc_component*, align 8
  store %struct.snd_soc_dapm_widget* %0, %struct.snd_soc_dapm_widget** %4, align 8
  store %struct.snd_kcontrol* %1, %struct.snd_kcontrol** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.snd_soc_dapm_widget*, %struct.snd_soc_dapm_widget** %4, align 8
  %9 = getelementptr inbounds %struct.snd_soc_dapm_widget, %struct.snd_soc_dapm_widget* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.snd_soc_component* @snd_soc_dapm_to_component(i32 %10)
  store %struct.snd_soc_component* %11, %struct.snd_soc_component** %7, align 8
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %43 [
    i32 128, label %13
    i32 129, label %32
  ]

13:                                               ; preds = %3
  %14 = load %struct.snd_soc_component*, %struct.snd_soc_component** %7, align 8
  %15 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @MT6351_AUDENC_ANA_CON0, align 4
  %18 = load i32, i32* @RG_AUDPREAMPLDCPRECHARGE, align 4
  %19 = shl i32 3, %18
  %20 = load i32, i32* @RG_AUDPREAMPLDCPRECHARGE, align 4
  %21 = shl i32 1, %20
  %22 = call i32 @regmap_update_bits(i32 %16, i32 %17, i32 %19, i32 %21)
  %23 = load %struct.snd_soc_component*, %struct.snd_soc_component** %7, align 8
  %24 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @MT6351_AUDENC_ANA_CON0, align 4
  %27 = load i32, i32* @RG_AUDPREAMPLDCCEN, align 4
  %28 = shl i32 3, %27
  %29 = load i32, i32* @RG_AUDPREAMPLDCCEN, align 4
  %30 = shl i32 1, %29
  %31 = call i32 @regmap_update_bits(i32 %25, i32 %26, i32 %28, i32 %30)
  br label %44

32:                                               ; preds = %3
  %33 = call i32 @usleep_range(i32 100, i32 120)
  %34 = load %struct.snd_soc_component*, %struct.snd_soc_component** %7, align 8
  %35 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @MT6351_AUDENC_ANA_CON0, align 4
  %38 = load i32, i32* @RG_AUDPREAMPLDCPRECHARGE, align 4
  %39 = shl i32 3, %38
  %40 = load i32, i32* @RG_AUDPREAMPLDCPRECHARGE, align 4
  %41 = shl i32 0, %40
  %42 = call i32 @regmap_update_bits(i32 %36, i32 %37, i32 %39, i32 %41)
  br label %44

43:                                               ; preds = %3
  br label %44

44:                                               ; preds = %43, %32, %13
  ret i32 0
}

declare dso_local %struct.snd_soc_component* @snd_soc_dapm_to_component(i32) #1

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
